# city-service

./: .gitignore  README.md  package.json  pyproject.toml  serverless.yml  test.json
src/application/: city_service.py  distance_service.py
src/infrastructure/aws/: secret_client.py
src/infrastructure/city_api/: __init__.py  city_client.py
src/interfaces/: get_cities.py  get_city.py  get_distance.py
test/application/: distance_service.py
