[tool.poetry]
name = "city-service"
version = "0.1.0"
description = ""
authors = ["Tiberio <tiberio.galbiati@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.146"
requests = "^2.31.0"
haversine = "^2.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "pytest"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
